# assetwriter_ros

./: .gitignore  CMakeLists.txt
data/: odomSyclaser
src/: assertwriter.cpp  assertwriter.h  main.cpp
